syntax = "proto3";
package event_wrapper;

import "assignment.proto";
import "course.proto";
import "grade.proto";
import "publish.proto";
import "relationship.proto";
import "submission.proto";
import "user.proto";
import "rag.proto";

message Retry {
    uint32 retry_number = 1;
    string retry_reason = 2;
    oneof event {
        assignment.Assignment assignment = 3;
        assignment.Rubric rubric = 4;
        course.Course course = 5;
        course.Section section = 6;
        course.Organization organization = 7;
        grade.AICriterionGradingStarted ai_criterion_grading_started = 8;
        grade.GradingMethod grading_method = 9;
        grade.AICriterionGrade ai_criterion_grade = 10;
        grade.AIInferredCriterionGrade ai_inferred_criterion_grade = 11;
        grade.InstructorCriterionGrade instructor_criterion_grade = 12;
        grade.InstructorOverrideCriterionGrade instructor_override_criterion_grade = 13;
        grade.CriterionGradeEmbedding criterion_grade_embedding = 14;
        grade.InstructorSubmissionGradeApproval instructor_submission_grade_approval = 15;
        publish.RegisterCoursePublicUUID register_course_public_uuid = 16;
        publish.RegisterSectionPublicUUID register_section_public_uuid = 17;
        publish.RegisterInstructorPublicUUID register_instructor_public_uuid = 18;
        publish.RegisterStudentPublicUUID register_student_public_uuid = 19;
        publish.RegisterAssignmentPublicUUID register_assignment_public_uuid = 20;
        publish.RegisterRubricPublicUUID register_rubric_public_uuid = 21;
        publish.RegisterSubmissionPublicUUID register_submission_public_uuid = 22;
        publish.PublishedToLMS published_to_lms = 23;
        publish.PublishedGradeToLMS published_grade_to_lms = 24;
        rag.DocumentSource document_source = 25;
        rag.Document document = 26;
        rag.RAGDivisionStarted rag_division_started = 27;
        rag.DividedDocument divided_document = 28;
        rag.DocumentSummarizationStarted document_summarization_started = 29;
        rag.SummarizedDocument summarized_document = 30;
        rag.DocumentEmbeddingStarted document_embedding_started = 31;
        rag.EmbeddedDocument embedded_document = 32;
        rag.RegisterAssignmentInstruction register_assignment_instruction = 33;
        rag.AssignmentInstruction assignment_instruction = 34;
        rag.RegisterCriterionInstruction register_criterion_instruction = 35;
        rag.CriterionInstruction criterion_instruction = 36;
        rag.InvalidateInstruction invalidate_instruction = 37;
        rag.FlowLog flow_log = 38;
        relationship.AssignmentAddedToCourse assignment_added_to_course = 39;
        relationship.AssignmentRemovedFromCourse assignment_removed_from_course = 40;
        relationship.StudentAddedToSection student_added_to_section = 41;
        relationship.StudentRemovedFromSection student_removed_from_section = 42;
        relationship.InstructorAddedToCourse instructor_added_to_course = 43;
        relationship.InstructorRemovedFromCourse instructor_removed_from_course = 44;
        submission.Submission submission = 45;
        submission.SubmissionFileGroup submission_file_group = 46;
        user.Student student = 47;
        user.Instructor instructor = 48;
    }
    string instance_name = 49;
}

message DeadLetter {
    string dead_letter_reason = 1;
    string instance_name = 2;
    oneof event {
        assignment.Assignment assignment = 3;
        assignment.Rubric rubric = 4;
        course.Course course = 5;
        course.Section section = 6;
        course.Organization organization = 7;
        grade.AICriterionGradingStarted ai_criterion_grading_started = 8;
        grade.GradingMethod grading_method = 9;
        grade.AICriterionGrade ai_criterion_grade = 10;
        grade.AIInferredCriterionGrade ai_inferred_criterion_grade = 11;
        grade.InstructorCriterionGrade instructor_criterion_grade = 12;
        grade.InstructorOverrideCriterionGrade instructor_override_criterion_grade = 13;
        grade.CriterionGradeEmbedding criterion_grade_embedding = 14;
        grade.InstructorSubmissionGradeApproval instructor_submission_grade_approval = 15;
        publish.RegisterCoursePublicUUID register_course_public_uuid = 16;
        publish.RegisterSectionPublicUUID register_section_public_uuid = 17;
        publish.RegisterInstructorPublicUUID register_instructor_public_uuid = 18;
        publish.RegisterStudentPublicUUID register_student_public_uuid = 19;
        publish.RegisterAssignmentPublicUUID register_assignment_public_uuid = 20;
        publish.RegisterRubricPublicUUID register_rubric_public_uuid = 21;
        publish.RegisterSubmissionPublicUUID register_submission_public_uuid = 22;
        publish.PublishedToLMS published_to_lms = 23;
        publish.PublishedGradeToLMS published_grade_to_lms = 24;
        rag.DocumentSource document_source = 25;
        rag.Document document = 26;
        rag.RAGDivisionStarted rag_division_started = 27;
        rag.DividedDocument divided_document = 28;
        rag.DocumentSummarizationStarted document_summarization_started = 29;
        rag.SummarizedDocument summarized_document = 30;
        rag.DocumentEmbeddingStarted document_embedding_started = 31;
        rag.EmbeddedDocument embedded_document = 32;
        rag.RegisterAssignmentInstruction register_assignment_instruction = 33;
        rag.AssignmentInstruction assignment_instruction = 34;
        rag.RegisterCriterionInstruction register_criterion_instruction = 35;
        rag.CriterionInstruction criterion_instruction = 36;
        rag.InvalidateInstruction invalidate_instruction = 37;
        rag.FlowLog flow_log = 38;
        relationship.AssignmentAddedToCourse assignment_added_to_course = 39;
        relationship.AssignmentRemovedFromCourse assignment_removed_from_course = 40;
        relationship.StudentAddedToSection student_added_to_section = 41;
        relationship.StudentRemovedFromSection student_removed_from_section = 42;
        relationship.InstructorAddedToCourse instructor_added_to_course = 43;
        relationship.InstructorRemovedFromCourse instructor_removed_from_course = 44;
        submission.Submission submission = 45;
        submission.SubmissionFileGroup submission_file_group = 46;
        user.Student student = 47;
        user.Instructor instructor = 48;
    }
}